--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-dom": "18.2.0",
     "react-fetch-hook": "^1.9.5",
     "react-scroll-to-bottom": "^4.2.0",
-    "socket.io-client": "^4.5.1"
+    "socket.io-client": "^4.5.1",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "eslint": "8.22.0",
